deployment/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  namespace: plx-cit-server
spec:
  entryPoints:
  - web
  - websecure
  routes:
    - match: Host(`apis.odzi.dog`) && PathPrefix(`/cit-server/v1`)
      kind: Rule
      services:
        - name: api
          port: "entrypoint"
    - match: Host(`cit.playbox.network`)
      kind: Rule
      services:
        - name: api
          port: "entrypoint"
    - match: Host(`cit-server-backend.k8s.odzi.dog`)
      kind: Rule
      services:
        - name: api
          port: "entrypoint"
  tls:
    certResolver: "cloudflare"
